--- a/app/views/themes/bioart/projects/show.html.haml
+++ b/app/views/themes/bioart/projects/show.html.haml
@@ -66,7 +66,7 @@
       - @project.pages.roots.each do |page|
         - next if page.is_project_overview == true
         .text_box{class: page.children.empty? ? false : :has_children}
-          .red= link_to page.title, page
+          .red= link_to  page.title, project_page_path(@project, page)
           - if page.children.empty?
             .body
               - if page.excerpt.blank?
@@ -76,13 +76,14 @@
             - if page.image?
               .image= image_tag page.image.url
           - else
-            .row.small-up-1.medium-up-2.large-up-3.xxlarge-up-4.page_children
+            .row.small-up-1.medium-up-2.large-up-3.page_children
               - page.children.each do |child|
-                = link_to child, class: [:page, :columns] do
+                = link_to project_page_path(@project, child), class: [:page, :columns] do
                   .page_image{style: "background: url(#{child.image? ?  child.image.url(:box).gsub(/development/, 'production') : @project.image.url }) center/cover no-repeat"}
                   .page_content
                     .title= child.title
                     .excerpt= truncate_html(sanitize(child.body, tags: %w{b strong bold i italic em u underline br}), length: 150)
+                    
       - unless @project.partners.empty?
         .collaborators_container
           .red Collaborators
