--- a/app/assets/themes/bioart/stylesheets/variables.scss
+++ b/app/assets/themes/bioart/stylesheets/variables.scss
@@ -1,5 +1,6 @@
 $headerblue: #66ffcc;
 $fuschia: #ff3366;
+$red: #fb2621;
 $titillium: 'Titillium Web', sans-serif;
 $rubik: 'Rubik', sans-serif;
 $abel: 'Abel', sans-serif;
