--- a/app/assets/themes/bioart/stylesheets/variables.scss
+++ b/app/assets/themes/bioart/stylesheets/variables.scss
@@ -1,6 +1,8 @@
 $headerblue: #66ffcc;
 $fuschia: #ff3366;
 $red: #fb2621;
+$bodybg: #d8d9db;
+$lighterbg: #f7f7f6;
 $titillium: 'Titillium Web', sans-serif;
 $rubik: 'Rubik', sans-serif;
 $abel: 'Abel', sans-serif;
