--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -11,7 +11,11 @@
     = csrf_meta_tags
     %link{:href => "/posts.rss", :rel => "alternate", :title => "RSS", :type => "application/rss+xml"}/
     %link{:href => "https://fonts.googleapis.com/css?family=Rubik|Titillium+Web|Abel", :rel => "stylesheet", :type => "text/css"}/
-
+    - if @project
+      :css
+        .project_detail .red {
+          background-color: #{@project.custom_heading_background_colour} !important;
+        }
     :javascript
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -34,7 +38,7 @@
                 %li= link_to 'News', posts_path
                 %li= link_to 'About', '/about'
                 %li= link_to 'Activities', activities_path
-                %li= link_to 'ARS Bioarctica', page_path('ars-bioarctica')
+                %li= link_to 'ARS Bioarctica', project_path('ars-bioarctica')
                 %li= link_to 'Projects', projects_path
                 -#%li= link_to 'Contact', page_path('contact')
     = yield
