--- a/app/views/themes/bioart/projects/index.html.haml
+++ b/app/views/themes/bioart/projects/index.html.haml
@@ -7,16 +7,16 @@
           Projects
           
     - @ongoing.each do |project|
-
-      .row.project[project]
-        .small-12.columns
-          .row.inner
-            .small-12.medium-2.project_icon.columns
-              = image_tag project.image.url(:box)
-            .small-12.medium-10.project_content.columns
-              .title= project.name
-              .years= project.year_range
-              .description= project.description
+      = link_to project, class: [:project] do
+        .row[project]
+          .small-12.columns
+            .row.inner
+              .small-12.medium-2.project_icon.columns
+                = image_tag project.image.url(:box).gsub(/development/, 'production')
+              .small-12.medium-10.project_content.columns
+                .title= project.name
+                .years= project.year_range
+                .description= project.description
 
   - unless @old.empty?
     .row
@@ -31,7 +31,7 @@
           .small-12.columns
             .row.inner
               .small-12.medium-2.project_icon.columns
-                = image_tag project.image.url(:box)
+                = image_tag project.image.url(:box).gsub(/development/, 'production')
               .small-12.medium-10.project_content.columns
                 .title= project.name
                 .years= project.year_range
