allow free input into text

--- a/app/views/themes/bioart/admin/projects/_form.html.haml
+++ b/app/views/themes/bioart/admin/projects/_form.html.haml
@@ -46,6 +46,7 @@
 
 = content_for :jquery do
   :plain
-    $('.colour_picker').spectrum({
+    $('.colour_picker').spectrum({showInput: true,
+    allowEmpty:true,
     preferredFormat: "hex"});
     
