css for projects

--- a/app/assets/themes/bioart/stylesheets/projects.css.scss
+++ b/app/assets/themes/bioart/stylesheets/projects.css.scss
@@ -101,7 +101,7 @@
         
         text-transform: uppercase;
         &.active {
-          background: $fuschia url(/assets/bioart/images/layout/menubar_arrow.png)  0.4em no-repeat;
+          background: $red url(/assets/bioart/images/layout/menubar_arrow.png)  0.4em no-repeat;
           
           color: #FFF;
           
