--- a/app/views/themes/bioart/projects/show.html.haml
+++ b/app/views/themes/bioart/projects/show.html.haml
@@ -1,4 +1,4 @@
-.project_detail{style: @project.custom_body_background_image? ?  "background: url(#{@project.custom_body_background_image.url}) repeat;" : false}
+.project_detail
   .row
     .small-12.columns
       %h1.project_title= @project.name
