--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -12,10 +12,19 @@
     %link{:href => "/posts.rss", :rel => "alternate", :title => "RSS", :type => "application/rss+xml"}/
     %link{:href => "https://fonts.googleapis.com/css?family=Rubik|Titillium+Web|Abel", :rel => "stylesheet", :type => "text/css"}/
     - if @project
-      :css
-        .project_detail .red {
-          background-color: #{@project.custom_heading_background_colour} !important;
-        }
+      - unless @project.custom_heading_background_colour.blank?
+        :css
+          .project_detail .red {
+            background-color: #{@project.custom_heading_background_colour} !important;
+          }
+          .project_detail ul.project_menu li a.active {
+            background: #{@project.custom_heading_background_colour}  url(/assets/bioart/images/layout/menubar_arrow.png)  0.4em no-repeat !important;
+          }
+      - unless @project.custom_body_background_image.blank?
+        :css
+          .project_detail {
+            background: url(#{@project.custom_body_background_image.url}) repeat !important;
+          }
     :javascript
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
