blog post filtering in backoffice

--- a/app/assets/themes/bioart/stylesheets/backoffice.css.scss
+++ b/app/assets/themes/bioart/stylesheets/backoffice.css.scss
@@ -24,3 +24,10 @@ form {
     list-style-type: none;
   }
 }
+
+table.cms {
+  tr:nth-child(even) {background: #FFF}
+  td {
+    padding: 1rem;
+  }
+}
