filter on pages

--- a/app/assets/themes/bioart/stylesheets/backoffice.css.scss
+++ b/app/assets/themes/bioart/stylesheets/backoffice.css.scss
@@ -29,5 +29,9 @@ table.cms {
   tr:nth-child(even) {background: #FFF}
   td {
     padding: 1rem;
+    p.project {
+      font-size: 0.7em;
+      color: #666;
+    }
   }
 }
