--- a/app/assets/themes/bioart/stylesheets/backoffice.css.scss
+++ b/app/assets/themes/bioart/stylesheets/backoffice.css.scss
@@ -19,6 +19,10 @@
 @import 'variables';
 
 @import 'foundation-datetimepicker';
+
+body {
+  background-color: #f7f7f6;
+}
 form {
   li {
     list-style-type: none;
