--- a/app/views/themes/bioart/admin/posts/_form.html.haml
+++ b/app/views/themes/bioart/admin/posts/_form.html.haml
@@ -1,6 +1,6 @@
 = semantic_nested_form_for [:admin, @post], html: {multipart: true, :"data-abide" =>''} do |f|
 
-  .row
+  .row.expanded
     .small-12.large-6.columns#error_explanation
       - unless @post.errors.empty?
         %h2= "#{pluralize(@post.errors.count, "error")} prohibited this post from being saved:"
@@ -8,16 +8,17 @@
           - @post.errors.full_messages.each do |msg|
             %li= msg
   
-  .row
+  .row.expanded
     .small-12.large-6.columns= f.input :title, input_html: {required: ''}
-  .row
+
+  .row.expanded
     .small-12.columns= f.input :body, as: :ckeditor, input_html: {required: ''}
 
-  .row
+  .row.expanded
     .small-12.large-6.columns
       %label.label Posted by:
       = f.collection_select :user_id, User.all, :id, :email, input_html: {required: ''}, label: 'Posted as:'
-  .row
+  .row.expanded
     .small-12.large-7.columns
       %hr
       %b Photos/image gallery:
@@ -29,24 +30,24 @@
         = ff.link_to_remove "Remove this photo"
       = f.link_to_add "Add a photo", :photos
 
-  .row
+  .row.expanded
     .small-10.medium-6.columns
       = f.input :activities, input_html: {class: :chosen_select}, label: 'Related to any activities?'
     .small-10.medium-6.columns
       = f.input :postcategories, input_html: {class: :chosen_select}, label: 'Post categories?'
       
-  .row
+  .row.expanded
     .small-12.large-6.columns= f.input :published, as: :boolean
-  .row
+  .row.expanded
     .small-12.large-6.columns= f.input :subsite, label: 'Also feature on sub-site: '   
         
-  .row
+  .row.expanded
     .small-6.large-3.columns= f.input :published_at, as: :string,  :input_html => { :class => "datetime_picker", value: f.object.published_at.blank? ? '' : f.object.published_at.strftime('%Y-%m-%d %H:%M') }
-  .row
+  .row.expanded
     .small-10.medium-6.columns= f.input :sticky, label: 'Make post sticky', hint: 'Will appear in floating blue box atop site', as: :boolean   
-  .row
+  .row.expanded
     .small-10.medium-6.columns= f.input :short_abstract, label: 'Few sentences to show if sticky:', as: :text
-  .row
+  .row.expanded
     .small-12.large-6.columns= f.submit 'Save', class: [:button, :small]
 = content_for :jquery do 
   :plain  
