that should do it with postcategories

--- a/app/views/themes/bioart/shared/_project_menu.html.haml
+++ b/app/views/themes/bioart/shared/_project_menu.html.haml
@@ -3,7 +3,7 @@
 %ul.horizontal.menu.project_menu
   - unless @project.pages.where(is_project_overview: true).empty?
     %li= link_to @project.pages.where(is_project_overview: true).first.title, project_page_path(@project, @project.pages.where(is_project_overview: true).first),  class: [controller.controller_name == 'pages' && @page && (@page == @project.pages.where(is_project_overview: true).first || @page.descendant_of?(@project.pages.where(is_project_overview: true).first)) ? :active : false]
-  %li= link_to 'blog', project_posts_path(@project), class: [controller.controller_name == 'posts' ? :active : false]
+  %li= link_to 'blog', project_posts_path(@project), class: [controller.controller_name == 'posts' || controller.controller_name == 'postcategories' ? :active : false]
   - lastslug = 'blog'
   
   - @project.pages.roots.each do |page|
