page to postcategory

--- a/app/views/themes/bioart/admin/postcategories/_form.html.haml
+++ b/app/views/themes/bioart/admin/postcategories/_form.html.haml
@@ -4,4 +4,7 @@
   .row
     .small-10.medium-5.columns= f.input :project
   .row
+    .small-10.medium-5.columns= f.input :page, label: 'Display under a page instead'    
+    
+  .row
     .small-12.columns= f.submit 'Save', class: [:button, :small]
