--- a/app/assets/themes/bioart/stylesheets/posts.css.scss
+++ b/app/assets/themes/bioart/stylesheets/posts.css.scss
@@ -93,8 +93,9 @@
       font-size: 1rem;
       line-height: 1.25em;
       img {
-        float: left;
-        margin-right: 25px;
+        clear: both;
+        display: block;
+        padding: 1rem 0;
       }
       iframe {
         &::before {
