--- a/app/views/themes/bioart/pages/show.html.haml
+++ b/app/views/themes/bioart/pages/show.html.haml
@@ -40,4 +40,7 @@
 
           .excerpt
             = raw clean_whitespace(sanitize(@page.body, tags: %w{img a p br i em bold strong b u}, attr: %w{href src}))
-        
+  - if @page.postcategory
+    .posts_index{class: @project.nil? ? false : :project_detail}
+      .row.small-up-1.medium-up-2.large-up-3#results= render partial: 'posts/postspage'
+      
