--- a/app/views/themes/bioart/posts/show.html.haml
+++ b/app/views/themes/bioart/posts/show.html.haml
@@ -12,8 +12,9 @@
         .post_image
           -#{style: "background: url(#{@post.photos.empty? ? current_theme_image_path('placeholder.png') : @post.photos.first.image.url(:box).gsub('development', 'production')}) center/cover no-repeat; height: #{@post.photos.first.image_height}px"}
           = image_tag @post.photos.first.image.url.gsub('development', 'production')
-          .hashtag
-            = "##{@post.node.name}"
+          - unless @project
+            .hashtag
+              = "##{@post.node.name}"
       .post_content
         .title= @post.title
-        .description= raw @post.body
+        .description= raw clean_whitespace(sanitize(@post.body, tags: %w{img a p br i em bold strong b u}, attr: %w{href src}))
