--- a/app/views/themes/bioart/posts/index.html.haml
+++ b/app/views/themes/bioart/posts/index.html.haml
@@ -14,10 +14,18 @@
         News
   .row.small-up-1.medium-up-2.large-up-3#results= render partial: 'posts/postspage'
  
+- if @project
+  = content_for :jquery do
+    :plain
+      $('#results').pageless({ totalPages: 10
+                             , url: '/projects/#{@project.slug}/posts/'
+                             , loaderMsg: 'Loading more posts....'
+                             });
 
-= content_for :jquery do
-  :plain
-    $('#results').pageless({ totalPages: 10
-                           , url: '/posts/'
-                           , loaderMsg: 'Loading more posts....'
-                           });
+- else
+  = content_for :jquery do
+    :plain
+      $('#results').pageless({ totalPages: 10
+                             , url: '/posts/'
+                             , loaderMsg: 'Loading more posts....'
+                             });
