--- a/app/views/themes/bioart/posts/index.html.haml
+++ b/app/views/themes/bioart/posts/index.html.haml
@@ -14,7 +14,9 @@
         News
   .row.small-up-1.medium-up-2.large-up-3#results= render partial: 'posts/postspage'
  
-- if @project
+- if @category
+  
+- elsif @project
   = content_for :jquery do
     :plain
       $('#results').pageless({ totalPages: 10
