--- a/app/views/themes/bioart/posts/show.html.haml
+++ b/app/views/themes/bioart/posts/show.html.haml
@@ -9,12 +9,40 @@
   .row
     .small-12.columns
       - unless @post.photos.empty?
+        
         .post_image
-          -#{style: "background: url(#{@post.photos.empty? ? current_theme_image_path('placeholder.png') : @post.photos.first.image.url(:box).gsub('development', 'production')}) center/cover no-repeat; height: #{@post.photos.first.image_height}px"}
-          = image_tag @post.photos.first.image.url.gsub('development', 'production')
+          - if @post.photos.size == 1
+
+            = image_tag @post.photos.first.image.url.gsub('development', 'production')
+          - else
+            .image_carousel{style: @post.photos.size > 1 ? "margin-bottom: 135px" : "margin-bottom: 1rem"}
+    
+              - @post.photos.each do |photo|
+                .slide[photo]
+                  = image_tag photo.image.url(:standard).gsub('development', 'production')
+                  .thumb= image_tag photo.image.url(:thumb).gsub('development', 'production')    
           - unless @project
             .hashtag
               = "##{@post.node.name}"
       .post_content
         .title= @post.title
         .description= raw clean_whitespace(sanitize(@post.body, tags: %w{img a p br i em bold strong b u}, attr: %w{href src}))
+        
+
+      = content_for :jquery do
+        :plain
+          $('.image_carousel').slick({infinite: true,
+            arrows: true,
+            slide: '.slide',
+            adaptiveHeight: false,
+            prevArrow: '<button type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="display: inline-block;"></button>',
+            nextArrow: '<button type="button" data-role="none" class="slick-next slick-arrow" aria-label="Next" role="button" style="display: inline-block;"></button>',
+            dots: true,
+            customPaging: function(slick,index) {
+               return slick.$slides.eq(index).find('.thumb').html() ;
+            },
+            variableWidth: false,
+            autoplay: true,
+            autoplaySpeed: 2400,
+            slidesToScroll: 1,
+          });
