--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -21,8 +21,8 @@
           .project_detail ul.project_menu li a.active {
             background: #{@project.custom_heading_background_colour}  url(/assets/bioart/images/layout/menubar_arrow.png)  0.4em no-repeat !important;
           }
-          .project_detail .text p a, .project_detail .grid .chunked p a {
-            color: #{@project.custom_heading_background_colour};
+          .project_detail .text p a, .project_detail .grid .chunked p a, .project_detail .text .excerpt a {
+            color: #{@project.custom_heading_background_colour} !important;
           }
           .image_carousel ul.slick-dots li.slick-active {
             border: 3px solid #{@project.custom_heading_background_colour} !important;
