--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -80,6 +80,7 @@ footer {
     input[type=text] {
       float: left;
       outline: none;
+      font-family: $titillium;
       border: none;
       padding-left: 20px;
       background:  url(/assets/bioart/images/layout/mag_glass.png) no-repeat 2px center , url(/assets/bioart/images/layout/menubar_arrow_blk.png) no-repeat right center #66ffcc;
