--- a/app/views/themes/bioart/search/create.html.haml
+++ b/app/views/themes/bioart/search/create.html.haml
@@ -1,6 +1,8 @@
 .search_results
   .result_header
     %h1
+      - if @projects.empty? && @activities.empty? && @news.empty?
+        No
       Search results for:
       %em= params[:searchterm]
         
@@ -19,21 +21,6 @@
               .title= project.name
               .years= project.year_range
               .description= project.description 
-               
-  - unless @news.empty?  
-    .row
-      .small-12.columns.section_title News
-    .row.small-up-1.medium-up-2.large-up-3
-      - @news.each do |post|
-        = link_to post, class: [:post, :columns] do
-
-          .post_image{style: "background: url(#{post.photos.empty? ? theme_image_path('placeholder.png') : post.photos.first.image.url(:box).gsub('development', 'production')}) center/cover no-repeat"}
-            .hashtag
-              = "##{post.node.name}"
-          .post_content
-            .title= post.title
-            .excerpt= truncate_html(sanitize(post.body, tags: %w{b strong bold i italic em u underline br}), length: 150)      
-      
   - unless @activities.empty?
     .row
       .small-12.columns.section_title Activities
@@ -49,3 +36,18 @@
             .date= date_range(activity.start_at, activity.end_at)
             %p= activity.location
             .excerpt= truncate_html(sanitize(activity.description, tags: %w{b strong bold i italic em u underline br}), length: 150)
+                           
+  - unless @news.empty?  
+    .row
+      .small-12.columns.section_title News
+    .row.small-up-1.medium-up-2.large-up-3
+      - @news.each do |post|
+        = link_to post, class: [:post, :columns] do
+
+          .post_image{style: "background: url(#{post.photos.empty? ? theme_image_path('placeholder.png') : post.photos.first.image.url(:box).gsub('development', 'production')}) center/cover no-repeat"}
+            .hashtag
+              = "##{post.node.name}"
+          .post_content
+            .title= post.title
+            .excerpt= truncate_html(sanitize(post.body, tags: %w{b strong bold i italic em u underline br}), length: 150)      
+      
