--- a/app/assets/themes/bioart/stylesheets/projects.css.scss
+++ b/app/assets/themes/bioart/stylesheets/projects.css.scss
@@ -138,6 +138,9 @@
     a {
       color: #000;
     }
+    span.years {
+      font-size: 1.8rem;
+    }
   }
   h3.project_subtitle {
     font-size: 2.875rem;
