--- a/app/views/themes/bioart/shared/_project_menu.html.haml
+++ b/app/views/themes/bioart/shared/_project_menu.html.haml
@@ -1,6 +1,6 @@
 
 - lastslug = ''
-%ul.horizontal.menu.project_menu
+%ul.dropdown.menu.project_menu{:'data-dropdown-menu' => ''}
   - unless @project.pages.where(is_project_overview: true).empty?
     %li= link_to @project.pages.where(is_project_overview: true).first.title, project_page_path(@project, @project.pages.where(is_project_overview: true).first),  class: [controller.controller_name == 'pages' && @page && (@page == @project.pages.where(is_project_overview: true).first || @page.descendant_of?(@project.pages.where(is_project_overview: true).first)) ? :active : false]
   %li= link_to 'blog', project_posts_path(@project), class: [(controller.controller_name == 'posts' || controller.controller_name == 'postcategories') && @page.nil? ? :active : false]
@@ -9,15 +9,19 @@
   - @project.pages.roots.each do |page|
 
     - next if page.is_project_overview == true
-    %li= link_to page.title, project_page_path(@project, page), class: [(controller.controller_name == 'pages' || controller.controller_name == 'posts') && @page && (@page == page || @page.descendant_of?(page)) ? :active : false]
-
-- if @page
-  - unless @page.children.empty? && @page.depth == 0
-    %ul.horizontal.menu.project_submenu{class: "depth_#{@page.depth.to_s}"}
-      - if @page.children.empty?
-        - if @page.depth > 0
-          - @page.parent.children.each do |page|
-            %li= link_to page.title, project_page_path(@project, page), class: [(controller.controller_name == 'pages' || controller.controller_name == 'posts') && @page && (@page == page || @page.descendant_of?(page)) ? :active : false]
-      - else
-        - @page.children.each do |page|
-          %li= link_to page.title, project_page_path(@project, page), class: [(controller.controller_name == 'pages'  || controller.controller_name == 'posts') && @page && (@page == page || @page.descendant_of?(page)) ? :active : false]
+    %li
+      = link_to page.title, project_page_path(@project, page), class: [(controller.controller_name == 'pages' || controller.controller_name == 'posts') && @page && (@page == page || @page.descendant_of?(page)) ? :active : false]
+      - unless page.children.empty?
+        %ul.menu
+          - page.children.each do |pp|
+            %li= link_to pp.title, project_page_path(@project, pp), class: [(controller.controller_name == 'pages' || controller.controller_name == 'posts') && @page && (@page == pp || @page.descendant_of?(pp)) ? :active : false]
+/ - if @page
+/   - unless @page.children.empty? && @page.depth == 0
+/     %ul.horizontal.menu.project_submenu{class: "depth_#{@page.depth.to_s}"}
+/       - if @page.children.empty?
+/         - if @page.depth > 0
+/           - @page.parent.children.each do |page|
+/             %li= link_to page.title, project_page_path(@project, page), class: [(controller.controller_name == 'pages' || controller.controller_name == 'posts') && @page && (@page == page || @page.descendant_of?(page)) ? :active : false]
+/       - else
+/         - @page.children.each do |page|
+/           %li= link_to page.title, project_page_path(@project, page), class: [(controller.controller_name == 'pages'  || controller.controller_name == 'posts') && @page && (@page == page || @page.descendant_of?(page)) ? :active : false]
