--- a/app/views/themes/bioart/posts/index.html.haml
+++ b/app/views/themes/bioart/posts/index.html.haml
@@ -3,7 +3,10 @@
   - if @project
     .row
       .small-12.columns
-        %h1.project_title= link_to @project.name, @project
+        %h1.project_title
+          = link_to @project.name, @project
+          - unless @project.ongoing == true
+            %span.years= @project.year_range
         - if @category
           %h3.project_subtitle= @category.name
     .row
