--- a/app/assets/themes/bioart/stylesheets/projects.css.scss
+++ b/app/assets/themes/bioart/stylesheets/projects.css.scss
@@ -97,10 +97,34 @@
         margin-bottom: 1rem;
       }
       &.is-dropdown-submenu-parent {
+        &:hover {
+          ul {
+            li {
+              a {
+                color: #000;
+                &.active {
+                  background: $red url(/assets/bioart/images/layout/menubar_plus.png)  0.4em no-repeat;
+                  color: #FFF;
+                }
+              }
+              
+              &:hover {
+                a {
+                  color: $red;
+                  &.active {
+                    
+                  }
+                }
+                
+              }
+            }
+          }
+        }
         a {
           background: #f7f7f6 url(/assets/bioart/images/layout/menubar_plus_blk.png)  0.4em no-repeat;
           &.active {
             background: $red url(/assets/bioart/images/layout/menubar_plus.png)  0.4em no-repeat;
+            color: #FFF;
           }
         }
         
@@ -140,14 +164,14 @@
     
     
   }
-  ul.project_submenu {
-    padding: 0 0 2rem;
-    margin: -21px 0 0 3rem;
-    li {
-      a {
-        font-size: 0.7em;}
-    }
-  }
+//  ul.project_submenu {
+//    padding: 0 0 2rem;
+//    margin: -21px 0 0 3rem;
+//    li {
+//      a {
+//        font-size: 0.7em;}
+//    }
+//  }
   
   h1.project_title {
     font-family: $rubik;
