--- a/app/assets/themes/bioart/stylesheets/posts.css.scss
+++ b/app/assets/themes/bioart/stylesheets/posts.css.scss
@@ -93,13 +93,15 @@
       font-size: 1.4em;
       line-height: 1.45em;
       font-weight: bold;
-      margin-bottom: 1em;
+      margin-bottom: 0.5em;
     }
     .author {
+      margin-bottom: 1em;
       font-family: $titillium;
       font-size: 1rem;
       line-height: 1.25em;
       color: #666;
+      text-transform: uppercase;
     }
     .description, .description p {
       font-family: $titillium;
@@ -115,6 +117,29 @@
            clear: both;
          }
         padding: 2rem 0;
+      }
+    }
+    .navigation {
+      padding: 1.5rem 0 2.5rem 0;
+      .side_link {
+        float: left;
+      
+        margin-bottom: 1em;
+        background-color: #000;
+        background: #fff url(/assets/bioart/images/layout/menubar_arrow_blk.png) 0.4em no-repeat;
+        border: 1px solid #C5C5C5;
+        padding: 0.4em 0.4em 0.4em 2em;
+        &.prev_post {
+          background: #fff url(/assets/bioart/images/layout/menubar_arrow_reverse_blk.png) 0.4em no-repeat;
+        }
+        padding: 0.5rem 0.4em 0.5em 1.8em;
+        a {
+          text-transform: uppercase;
+          color: #C5C5C5;
+          &:hover {
+            color: #FFF;
+          }
+        }
       }
     }
   }
